--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nx/workspace": "16.6.0",
     "@schematics/angular": "~16.1.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cypress": "^12.16.0",
@@ -48,6 +48,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
     "nx": "16.6.0",
+    "nx-cloud": "^16.2.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
